src/cli/snapshots/dispatch_tui__cli__agent_tree__tests__snapshot_modified_and_read_badges.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│  README.md [Read]                              │
│▼ src                                           │
│    lib.rs [Modified]                           │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
