src/cli/snapshots/dispatch_tui__cli__agent_tree__tests__snapshot_nested_directories_auto_expanded.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│▼ a                                             │
│  ▼ b                                           │
│        c.rs [Modified]                         │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
