src/cli/snapshots/dispatch_tui__cli__agent_tree__tests__snapshot_notice_is_shown_in_the_bottom_border.snap
---
source: src/cli/agent_tree.rs
expression: rendered
---
┌ dispatch ──────────────────────────────────────┐
│  a.rs [Read]                                   │
│▼ src                                           │
│    lib.rs [Modified]                           │
│  z.rs [Read]                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└ src/gone.rs: no longer exists ─────────────────┘
